--- a/Training-Responsividade/css/style.css
+++ b/Training-Responsividade/css/style.css
@@ -19,14 +19,31 @@ ul{
 img{
     max-width: 100%;
 }
-
-
-/* CABECALHO */
-.cabecalho{
-    width: 100%;
-    float:left;
-    padding:3% 4% ;
+/* CONTAINER */
+.container{
+  width: 100%;
+  float:left;
+  padding: 3% 4%;
+  text-align: center;
+ 
 }
+/* BG-COLOR */
+.bg-gradient{
+  background: linear-gradient(to right,#ce2e3c,#da6709);
+}
+.bg-black{
+  background-color: #130400;
+}
+.bg-white{
+  background-color: #fff;
+  
+}
+/* Helpers */
+.radius{
+  border-radius:7px;
+}
+/* CABECALHO */
+
 .logo{
     width:56px ;
     height: 56px;
@@ -42,7 +59,6 @@ img{
   color:#fff;
   border-radius: 56px;
   cursor: pointer;
-  background: linear-gradient(to right,#ce2e3c,#da6709);
 }
 /* Menu Navegação */
 .menu{
@@ -55,11 +71,11 @@ img{
   display: none;
 }
 .btn-close{
-  font-size:3em;
+  font-size:1.5em;
   color:#fff;
   float: right;
   cursor:pointer;
-  margin-right: 5%;
+  margin: 2% 3% 0 0;
 }
 .menu ul{
   width: 100%;
@@ -79,10 +95,7 @@ img{
 }
 /* BANNER */
 .banner{
-  width:100%;
-  float:left;
-  text-align:center;
-  padding: 3% 4%;
+  
   background:url(../img/bg.jpg) no-repeat,fixed;
 }
 .title{
@@ -96,5 +109,226 @@ img{
 .title h3{
   font-size:1.5em;
   color:#fff;
+}
+.buttons{width: 100%;}
+.buttons i{
+  float: right;
+}
+.btn{
+  width:100%;
+  font-size:1.5em;
+  text-align: left;
+  cursor:pointer;
+  padding: 5%;
+  border-radius:10px;
+}
+.btn-cadastrar{
+  margin-top:2%;
+  color:#130400; 
+}
+.btn-sobre{
+  
+  color:#fff;
+  margin-top:2%  ;  
+}
+
+.servico{
+  width: 100%;
+  text-align: left;
+  
+
+  margin-bottom: 3%; 
+}
+.servico img{
+  border-radius:7px 7px 0 0 ;
+}
+.inner{
+  padding: 7%; 
+}
+.inner a{
+  font-size:1.5em;
+  color:#130400;
+  font-weight:700;
+}
+.inner h4{
+  font-size:1.2em;
+  columns: #130400;
+  margin-top:2%;
+}
+.inner p{
+  margin-top: 6%;
+  color:#130400;
+  line-height:1.5em;
+}
+
+/* NESLETER */
+
+.newsletter h2{
+  font-size:1.5em;
+  color:#fff;
+  font-weight:700;
+}
+.newsletter h3{
+  color:#fff;
+}
+.newsletter form{
+  margin-top: 2%;
+}
+.newsletter input{
+  color:#fff;
+  border:1px solid rgba(255,255, 255, 0.3);
+  padding:5%;
+  border-radius: 5px;
+  width: 100%; 
+}
+.newsletter button{
+  width: 100%;
+  color: #130400;
+  padding:5%;
+  cursor: pointer;
+  margin-top: 2%;
+}
+/* RODAPE */
+
+/* .rodape{
+  background: linear-gradient(to right,#ce2e3c,#da6709);
+  
+} */
+.social-icons a{
+  font-size: 1.5em;
+  color:rgba(255, 255 ,255, 0.7);
+  margin-right: 3%;
 
 }
+.social-icons a:last-child{
+  margin-right: 0;
+}
+.social-icons a:hover{
+  color:rgb(255,255,255);
+}
+.copyright{
+  margin-top:2%;
+  color:rgba(255, 255 ,255, 0.7);
+  
+}
+
+/* MEDYATYPES */
+
+/* 
+
+MOBILE FIRST 
+
+SMALL DEVICES SMARTPHONES */
+
+@media screen and (min-width:480px){
+  .logo{
+    width:214px ;
+    background: url(../img/logo.png) center center/214px no-repeat;
+  }
+  .btn{
+    font-size:2em;
+  }
+}
+/* TABLESTS */
+@media screen and (min-width:768px){
+  .servico{width: 49%;float: left;margin-right: 2%}
+  .servico:nth-child(2){
+    margin-right: 0;
+  }
+  .newsletter h2{
+    font-size: 2em;
+
+  }
+  .newsletter h3{
+    font-size: 1.5em;
+  }
+  .newsletter input{
+    width: 70%;
+    padding: 2%;
+    float:left;
+    margin-right: 1%;
+  }
+  .newsletter button{
+    width:29%;
+    padding: 2%;
+    float: right;
+    margin-top: 0;
+  }
+}
+/* MEDIUM DEVICES  TABLET E DESKTOPS */
+@media screen and (min-width:960px){
+   .title{
+      width: 70%;
+      float:left ;
+      text-align: left;
+    }
+    .title h2{
+      font-size:3em; 
+    }
+    .title h3{
+      font-size:2em;
+    }
+    .buttons{
+      width: 30%;
+      float: right;
+      margin-top:0;
+    }
+    .servico{
+      width: 32%;
+    }
+    .servico:nth-child(2){
+      margin-right: 2%;
+    }
+    .servico:nth-child(3){
+      margin-right: 0;
+    }
+    .newsletter input{
+      width: 60%;
+      float:none;
+    }
+    .newsletter button{
+      width: 20%;
+      float:none;
+    }
+}
+/* Large Devices, - Wide Screens */
+/* @media screen and (min-width:1280px){
+  .btn-menu{
+    display: none;
+  }
+  .btn-close{
+    display: none;
+  } 
+  .menu{
+    width: auto;
+    height:56px;
+    line-height:56px;
+    float:right;
+    background-color:#f5f5f5;
+    display: block !important;
+    position: static; 
+  }
+  .menu li{
+    padding: 0;
+    float:left;
+  }  
+  .menu li a{
+    columns: #130400;
+    font-size:1em;
+    padding: 15px;
+  }
+  .menu li a:hover {
+    border:none;
+    color:#da6709;
+  }
+}   */
+@media screen and (min-width: 1280px) {
+  .btn-menu {display: none;}
+  .btn-close {display: none;}
+  .menu {width: auto; height: 56px; line-height: 56px; float: right; background-color: #f5f5f5; 
+  display: block !important; position: static;}
+  .menu li {padding: 0; float: left;}
+  .menu li a {color:#130400; font-size: 1em; padding: 15px; }
+  .menu li a:hover {border: none; color:#da6709; }
+  }
+  
